parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> begin asign end
Rule 2     programa -> begin expr end
Rule 3     programa -> begin seleccion end
Rule 4     expr -> expr_num
Rule 5     expr -> alc_var
Rule 6     expr -> expr_cad
Rule 7     expr -> expr_func
Rule 8     expr -> expr_list
Rule 9     expr -> expr_tabl
Rule 10    expr -> expr mas expr
Rule 11    expr -> expr menos expr
Rule 12    expr -> expr mult expr
Rule 13    expr -> expr div expr
Rule 14    expr -> expr mod expr
Rule 15    expr -> expr exp expr
Rule 16    alc_var -> expr_var
Rule 17    alc_var -> expr_var acor expr ccor punto expr_var
Rule 18    expr -> apar expr cpar
Rule 19    asign -> variable asignacion algo
Rule 20    algo -> expr
Rule 21    algo -> input
Rule 22    asign -> variable coma asign coma algo
Rule 23    variable -> var dosptos tipo
Rule 24    tipo -> int
Rule 25    tipo -> string
Rule 26    tipo -> list of int
Rule 27    tipo -> list of string
Rule 28    tipo -> table
Rule 29    expr_num -> num
Rule 30    expr_num -> leng
Rule 31    leng -> len apar expr3 cpar
Rule 32    expr3 -> expr_cad
Rule 33    expr3 -> expr_list
Rule 34    expr3 -> expr_tabl
Rule 35    expr -> menos expr
Rule 36    expr_var -> var
Rule 37    expr_cad -> cadena
Rule 38    expr_list -> lista_simpl
Rule 39    expr_list -> lista_comp
Rule 40    lista_simpl -> acor contenido ccor
Rule 41    contenido -> empty
Rule 42    contenido -> elementos
Rule 43    lista_comp -> acor porc definicion porc ccor
Rule 44    definicion -> lista_comp2
Rule 45    definicion -> cuantif
Rule 46    lista_comp2 -> expr dosptos caso_list dosptos expr
Rule 47    caso_list -> expr_list
Rule 48    caso_list -> var
Rule 49    elementos -> elementos coma expr
Rule 50    elementos -> expr
Rule 51    expr_list -> expr_list acor expr_num ccor
Rule 52    expr_list -> range apar expr coma expr cpar
Rule 53    expr_tabl -> new table acor expr ccor where asignes
Rule 54    asignes -> variable asignacion algo
Rule 55    asignes -> asignes coma asignes
Rule 56    cuantif -> op expr_var dosptos expr dosptos expr
Rule 57    op -> mas
Rule 58    op -> menos
Rule 59    op -> mult
Rule 60    op -> div
Rule 61    op -> mod
Rule 62    op -> exp
Rule 63    op -> negac
Rule 64    op -> disyunc
Rule 65    op -> conjunc
Rule 66    op -> mayor
Rule 67    op -> menor
Rule 68    op -> mayorigual
Rule 69    op -> menorigual
Rule 70    op -> igual
Rule 71    op -> desigual
Rule 72    condicion -> term_b
Rule 73    condicion -> booleano
Rule 74    condicion -> cond_parentizada
Rule 75    condicion -> binop_bool
Rule 76    condicion -> negacion
Rule 77    binop_bool -> condicion conjunc condicion
Rule 78    binop_bool -> condicion disyunc condicion
Rule 79    negacion -> negac term_b
Rule 80    term_b -> true
Rule 81    term_b -> false
Rule 82    cond_parentizada -> apar condicion cpar
Rule 83    booleano -> booleano igual valor
Rule 84    booleano -> booleano desigual valor
Rule 85    booleano -> booleano mayor valor
Rule 86    booleano -> booleano menor valor
Rule 87    booleano -> booleano mayorigual valor
Rule 88    booleano -> booleano menorigual valor
Rule 89    booleano -> valor
Rule 90    booleano -> bool_parentizado
Rule 91    valor -> expr_cad
Rule 92    valor -> expr_num
Rule 93    valor -> expr_var
Rule 94    bool_parentizado -> apar booleano cpar
Rule 95    seleccion -> if condicion then expr else expr
Rule 96    expr_func -> expr_fby
Rule 97    expr_func -> expr_tby
Rule 98    expr_fby -> expr fby expr
Rule 99    expr_tby -> expr tby varia
Rule 100   varia -> expr_list
Rule 101   varia -> expr_var
Rule 102   empty -> <empty>

Terminals, with rules where they appear

acor                 : 17 40 43 51 53
apar                 : 18 31 52 82 94
asignacion           : 19 54
begin                : 1 2 3
cadena               : 37
ccor                 : 17 40 43 51 53
coma                 : 22 22 49 52 55
conjunc              : 65 77
cpar                 : 18 31 52 82 94
desigual             : 71 84
disyunc              : 64 78
div                  : 13 60
dosptos              : 23 46 46 56 56
else                 : 95
end                  : 1 2 3
error                : 
exp                  : 15 62
false                : 81
fby                  : 98
if                   : 95
igual                : 70 83
input                : 21
int                  : 24 26
len                  : 31
list                 : 26 27
mas                  : 10 57
mayor                : 66 85
mayorigual           : 68 87
menor                : 67 86
menorigual           : 69 88
menos                : 11 35 58
mod                  : 14 61
mult                 : 12 59
negac                : 63 79
new                  : 53
num                  : 29
of                   : 26 27
porc                 : 43 43
punto                : 17
range                : 52
string               : 25 27
table                : 28 53
tby                  : 99
then                 : 95
true                 : 80
var                  : 23 36 48
where                : 53

Nonterminals, with rules where they appear

alc_var              : 5
algo                 : 19 22 54
asign                : 1 22
asignes              : 53 55 55
binop_bool           : 75
bool_parentizado     : 90
booleano             : 73 83 84 85 86 87 88 94
caso_list            : 46
cond_parentizada     : 74
condicion            : 77 77 78 78 82 95
contenido            : 40
cuantif              : 45
definicion           : 43
elementos            : 42 49
empty                : 41
expr                 : 2 10 10 11 11 12 12 13 13 14 14 15 15 17 18 20 35 46 46 49 50 52 52 53 56 56 95 95 98 98 99
expr3                : 31
expr_cad             : 6 32 91
expr_fby             : 96
expr_func            : 7
expr_list            : 8 33 47 51 100
expr_num             : 4 51 92
expr_tabl            : 9 34
expr_tby             : 97
expr_var             : 16 17 17 56 93 101
leng                 : 30
lista_comp           : 39
lista_comp2          : 44
lista_simpl          : 38
negacion             : 76
op                   : 56
programa             : 0
seleccion            : 3
term_b               : 72 79
tipo                 : 23
valor                : 83 84 85 86 87 88 89
varia                : 99
variable             : 19 22 54

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . begin asign end
    (2) programa -> . begin expr end
    (3) programa -> . begin seleccion end

    begin           shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> begin . asign end
    (2) programa -> begin . expr end
    (3) programa -> begin . seleccion end
    (19) asign -> . variable asignacion algo
    (22) asign -> . variable coma asign coma algo
    (4) expr -> . expr_num
    (5) expr -> . alc_var
    (6) expr -> . expr_cad
    (7) expr -> . expr_func
    (8) expr -> . expr_list
    (9) expr -> . expr_tabl
    (10) expr -> . expr mas expr
    (11) expr -> . expr menos expr
    (12) expr -> . expr mult expr
    (13) expr -> . expr div expr
    (14) expr -> . expr mod expr
    (15) expr -> . expr exp expr
    (18) expr -> . apar expr cpar
    (35) expr -> . menos expr
    (95) seleccion -> . if condicion then expr else expr
    (23) variable -> . var dosptos tipo
    (29) expr_num -> . num
    (30) expr_num -> . leng
    (16) alc_var -> . expr_var
    (17) alc_var -> . expr_var acor expr ccor punto expr_var
    (37) expr_cad -> . cadena
    (96) expr_func -> . expr_fby
    (97) expr_func -> . expr_tby
    (38) expr_list -> . lista_simpl
    (39) expr_list -> . lista_comp
    (51) expr_list -> . expr_list acor expr_num ccor
    (52) expr_list -> . range apar expr coma expr cpar
    (53) expr_tabl -> . new table acor expr ccor where asignes
    (31) leng -> . len apar expr3 cpar
    (36) expr_var -> . var
    (98) expr_fby -> . expr fby expr
    (99) expr_tby -> . expr tby varia
    (40) lista_simpl -> . acor contenido ccor
    (43) lista_comp -> . acor porc definicion porc ccor

    apar            shift and go to state 15
    menos           shift and go to state 6
    if              shift and go to state 7
    var             shift and go to state 12
    num             shift and go to state 21
    cadena          shift and go to state 8
    range           shift and go to state 9
    new             shift and go to state 13
    len             shift and go to state 19
    acor            shift and go to state 28

    expr_list                      shift and go to state 3
    seleccion                      shift and go to state 4
    expr_func                      shift and go to state 27
    expr_fby                       shift and go to state 11
    alc_var                        shift and go to state 14
    leng                           shift and go to state 16
    lista_comp                     shift and go to state 17
    expr_cad                       shift and go to state 18
    variable                       shift and go to state 5
    expr_tby                       shift and go to state 20
    lista_simpl                    shift and go to state 10
    expr                           shift and go to state 22
    expr_var                       shift and go to state 23
    asign                          shift and go to state 24
    expr_num                       shift and go to state 25
    expr_tabl                      shift and go to state 26

state 2

    (0) S' -> programa .



state 3

    (8) expr -> expr_list .
    (51) expr_list -> expr_list . acor expr_num ccor

    mas             reduce using rule 8 (expr -> expr_list .)
    menos           reduce using rule 8 (expr -> expr_list .)
    mult            reduce using rule 8 (expr -> expr_list .)
    div             reduce using rule 8 (expr -> expr_list .)
    mod             reduce using rule 8 (expr -> expr_list .)
    exp             reduce using rule 8 (expr -> expr_list .)
    fby             reduce using rule 8 (expr -> expr_list .)
    tby             reduce using rule 8 (expr -> expr_list .)
    end             reduce using rule 8 (expr -> expr_list .)
    cpar            reduce using rule 8 (expr -> expr_list .)
    coma            reduce using rule 8 (expr -> expr_list .)
    ccor            reduce using rule 8 (expr -> expr_list .)
    dosptos         reduce using rule 8 (expr -> expr_list .)
    else            reduce using rule 8 (expr -> expr_list .)
    porc            reduce using rule 8 (expr -> expr_list .)
    acor            shift and go to state 29


state 4

    (3) programa -> begin seleccion . end

    end             shift and go to state 30


state 5

    (19) asign -> variable . asignacion algo
    (22) asign -> variable . coma asign coma algo

    asignacion      shift and go to state 32
    coma            shift and go to state 31


state 6

    (35) expr -> menos . expr
    (4) expr -> . expr_num
    (5) expr -> . alc_var
    (6) expr -> . expr_cad
    (7) expr -> . expr_func
    (8) expr -> . expr_list
    (9) expr -> . expr_tabl
    (10) expr -> . expr mas expr
    (11) expr -> . expr menos expr
    (12) expr -> . expr mult expr
    (13) expr -> . expr div expr
    (14) expr -> . expr mod expr
    (15) expr -> . expr exp expr
    (18) expr -> . apar expr cpar
    (35) expr -> . menos expr
    (29) expr_num -> . num
    (30) expr_num -> . leng
    (16) alc_var -> . expr_var
    (17) alc_var -> . expr_var acor expr ccor punto expr_var
    (37) expr_cad -> . cadena
    (96) expr_func -> . expr_fby
    (97) expr_func -> . expr_tby
    (38) expr_list -> . lista_simpl
    (39) expr_list -> . lista_comp
    (51) expr_list -> . expr_list acor expr_num ccor
    (52) expr_list -> . range apar expr coma expr cpar
    (53) expr_tabl -> . new table acor expr ccor where asignes
    (31) leng -> . len apar expr3 cpar
    (36) expr_var -> . var
    (98) expr_fby -> . expr fby expr
    (99) expr_tby -> . expr tby varia
    (40) lista_simpl -> . acor contenido ccor
    (43) lista_comp -> . acor porc definicion porc ccor

    apar            shift and go to state 15
    menos           shift and go to state 6
    num             shift and go to state 21
    cadena          shift and go to state 8
    range           shift and go to state 9
    new             shift and go to state 13
    len             shift and go to state 19
    var             shift and go to state 33
    acor            shift and go to state 28

    lista_comp                     shift and go to state 17
    leng                           shift and go to state 16
    expr                           shift and go to state 34
    expr_var                       shift and go to state 23
    expr_cad                       shift and go to state 18
    expr_num                       shift and go to state 25
    expr_tabl                      shift and go to state 26
    expr_func                      shift and go to state 27
    expr_list                      shift and go to state 3
    expr_tby                       shift and go to state 20
    alc_var                        shift and go to state 14
    expr_fby                       shift and go to state 11
    lista_simpl                    shift and go to state 10

state 7

    (95) seleccion -> if . condicion then expr else expr
    (72) condicion -> . term_b
    (73) condicion -> . booleano
    (74) condicion -> . cond_parentizada
    (75) condicion -> . binop_bool
    (76) condicion -> . negacion
    (80) term_b -> . true
    (81) term_b -> . false
    (83) booleano -> . booleano igual valor
    (84) booleano -> . booleano desigual valor
    (85) booleano -> . booleano mayor valor
    (86) booleano -> . booleano menor valor
    (87) booleano -> . booleano mayorigual valor
    (88) booleano -> . booleano menorigual valor
    (89) booleano -> . valor
    (90) booleano -> . bool_parentizado
    (82) cond_parentizada -> . apar condicion cpar
    (77) binop_bool -> . condicion conjunc condicion
    (78) binop_bool -> . condicion disyunc condicion
    (79) negacion -> . negac term_b
    (91) valor -> . expr_cad
    (92) valor -> . expr_num
    (93) valor -> . expr_var
    (94) bool_parentizado -> . apar booleano cpar
    (37) expr_cad -> . cadena
    (29) expr_num -> . num
    (30) expr_num -> . leng
    (36) expr_var -> . var
    (31) leng -> . len apar expr3 cpar

    true            shift and go to state 43
    false           shift and go to state 35
    apar            shift and go to state 40
    negac           shift and go to state 49
    cadena          shift and go to state 8
    num             shift and go to state 21
    var             shift and go to state 33
    len             shift and go to state 19

    expr_num                       shift and go to state 48
    term_b                         shift and go to state 46
    negacion                       shift and go to state 36
    expr_var                       shift and go to state 47
    expr_cad                       shift and go to state 41
    bool_parentizado               shift and go to state 37
    condicion                      shift and go to state 38
    valor                          shift and go to state 39
    leng                           shift and go to state 16
    booleano                       shift and go to state 42
    cond_parentizada               shift and go to state 44
    binop_bool                     shift and go to state 45

state 8

    (37) expr_cad -> cadena .

    mas             reduce using rule 37 (expr_cad -> cadena .)
    menos           reduce using rule 37 (expr_cad -> cadena .)
    mult            reduce using rule 37 (expr_cad -> cadena .)
    div             reduce using rule 37 (expr_cad -> cadena .)
    mod             reduce using rule 37 (expr_cad -> cadena .)
    exp             reduce using rule 37 (expr_cad -> cadena .)
    fby             reduce using rule 37 (expr_cad -> cadena .)
    tby             reduce using rule 37 (expr_cad -> cadena .)
    end             reduce using rule 37 (expr_cad -> cadena .)
    coma            reduce using rule 37 (expr_cad -> cadena .)
    igual           reduce using rule 37 (expr_cad -> cadena .)
    desigual        reduce using rule 37 (expr_cad -> cadena .)
    mayor           reduce using rule 37 (expr_cad -> cadena .)
    menor           reduce using rule 37 (expr_cad -> cadena .)
    mayorigual      reduce using rule 37 (expr_cad -> cadena .)
    menorigual      reduce using rule 37 (expr_cad -> cadena .)
    then            reduce using rule 37 (expr_cad -> cadena .)
    conjunc         reduce using rule 37 (expr_cad -> cadena .)
    disyunc         reduce using rule 37 (expr_cad -> cadena .)
    cpar            reduce using rule 37 (expr_cad -> cadena .)
    ccor            reduce using rule 37 (expr_cad -> cadena .)
    dosptos         reduce using rule 37 (expr_cad -> cadena .)
    else            reduce using rule 37 (expr_cad -> cadena .)
    porc            reduce using rule 37 (expr_cad -> cadena .)


state 9

    (52) expr_list -> range . apar expr coma expr cpar

    apar            shift and go to state 50


state 10

    (38) expr_list -> lista_simpl .

    acor            reduce using rule 38 (expr_list -> lista_simpl .)
    ccor            reduce using rule 38 (expr_list -> lista_simpl .)
    mas             reduce using rule 38 (expr_list -> lista_simpl .)
    menos           reduce using rule 38 (expr_list -> lista_simpl .)
    mult            reduce using rule 38 (expr_list -> lista_simpl .)
    div             reduce using rule 38 (expr_list -> lista_simpl .)
    mod             reduce using rule 38 (expr_list -> lista_simpl .)
    exp             reduce using rule 38 (expr_list -> lista_simpl .)
    fby             reduce using rule 38 (expr_list -> lista_simpl .)
    tby             reduce using rule 38 (expr_list -> lista_simpl .)
    else            reduce using rule 38 (expr_list -> lista_simpl .)
    end             reduce using rule 38 (expr_list -> lista_simpl .)
    cpar            reduce using rule 38 (expr_list -> lista_simpl .)
    coma            reduce using rule 38 (expr_list -> lista_simpl .)
    dosptos         reduce using rule 38 (expr_list -> lista_simpl .)
    porc            reduce using rule 38 (expr_list -> lista_simpl .)


state 11

    (96) expr_func -> expr_fby .

    cpar            reduce using rule 96 (expr_func -> expr_fby .)
    mas             reduce using rule 96 (expr_func -> expr_fby .)
    menos           reduce using rule 96 (expr_func -> expr_fby .)
    mult            reduce using rule 96 (expr_func -> expr_fby .)
    div             reduce using rule 96 (expr_func -> expr_fby .)
    mod             reduce using rule 96 (expr_func -> expr_fby .)
    exp             reduce using rule 96 (expr_func -> expr_fby .)
    fby             reduce using rule 96 (expr_func -> expr_fby .)
    tby             reduce using rule 96 (expr_func -> expr_fby .)
    end             reduce using rule 96 (expr_func -> expr_fby .)
    coma            reduce using rule 96 (expr_func -> expr_fby .)
    ccor            reduce using rule 96 (expr_func -> expr_fby .)
    dosptos         reduce using rule 96 (expr_func -> expr_fby .)
    else            reduce using rule 96 (expr_func -> expr_fby .)
    porc            reduce using rule 96 (expr_func -> expr_fby .)


state 12

    (23) variable -> var . dosptos tipo
    (36) expr_var -> var .

    dosptos         shift and go to state 51
    acor            reduce using rule 36 (expr_var -> var .)
    end             reduce using rule 36 (expr_var -> var .)
    mas             reduce using rule 36 (expr_var -> var .)
    menos           reduce using rule 36 (expr_var -> var .)
    mult            reduce using rule 36 (expr_var -> var .)
    div             reduce using rule 36 (expr_var -> var .)
    mod             reduce using rule 36 (expr_var -> var .)
    exp             reduce using rule 36 (expr_var -> var .)
    fby             reduce using rule 36 (expr_var -> var .)
    tby             reduce using rule 36 (expr_var -> var .)


state 13

    (53) expr_tabl -> new . table acor expr ccor where asignes

    table           shift and go to state 52


state 14

    (5) expr -> alc_var .

    mas             reduce using rule 5 (expr -> alc_var .)
    menos           reduce using rule 5 (expr -> alc_var .)
    mult            reduce using rule 5 (expr -> alc_var .)
    div             reduce using rule 5 (expr -> alc_var .)
    mod             reduce using rule 5 (expr -> alc_var .)
    exp             reduce using rule 5 (expr -> alc_var .)
    fby             reduce using rule 5 (expr -> alc_var .)
    tby             reduce using rule 5 (expr -> alc_var .)
    end             reduce using rule 5 (expr -> alc_var .)
    cpar            reduce using rule 5 (expr -> alc_var .)
    coma            reduce using rule 5 (expr -> alc_var .)
    ccor            reduce using rule 5 (expr -> alc_var .)
    dosptos         reduce using rule 5 (expr -> alc_var .)
    else            reduce using rule 5 (expr -> alc_var .)
    porc            reduce using rule 5 (expr -> alc_var .)


state 15

    (18) expr -> apar . expr cpar
    (4) expr -> . expr_num
    (5) expr -> . alc_var
    (6) expr -> . expr_cad
    (7) expr -> . expr_func
    (8) expr -> . expr_list
    (9) expr -> . expr_tabl
    (10) expr -> . expr mas expr
    (11) expr -> . expr menos expr
    (12) expr -> . expr mult expr
    (13) expr -> . expr div expr
    (14) expr -> . expr mod expr
    (15) expr -> . expr exp expr
    (18) expr -> . apar expr cpar
    (35) expr -> . menos expr
    (29) expr_num -> . num
    (30) expr_num -> . leng
    (16) alc_var -> . expr_var
    (17) alc_var -> . expr_var acor expr ccor punto expr_var
    (37) expr_cad -> . cadena
    (96) expr_func -> . expr_fby
    (97) expr_func -> . expr_tby
    (38) expr_list -> . lista_simpl
    (39) expr_list -> . lista_comp
    (51) expr_list -> . expr_list acor expr_num ccor
    (52) expr_list -> . range apar expr coma expr cpar
    (53) expr_tabl -> . new table acor expr ccor where asignes
    (31) leng -> . len apar expr3 cpar
    (36) expr_var -> . var
    (98) expr_fby -> . expr fby expr
    (99) expr_tby -> . expr tby varia
    (40) lista_simpl -> . acor contenido ccor
    (43) lista_comp -> . acor porc definicion porc ccor
